# gitlab-injest

./: .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  app.py  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yml
src/: config.py  utils.py
src/gitlab/: gitlab_api.py
tests/: test_list_files.py
tests/unit/gitlab/: test_list_branch.py  test_list_subfolder.py  test_read_repo.py
tests/unit/utils/: test_iterate.py  test_prepare_content.py  test_prepare_info.py
