[project]
name = "gitlab-injest"
version = "0.1.0"
description = "Converts private gitlab repo into plain text."
authors = [
    {name = "ttiago.ccabo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.42.2,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

